<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <!-- TITLE -->

    <LinearLayout
        android:id="@+id/Home_LinearLayout_TOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanumsquareeb"
            android:text="@string/Home_title"
            android:textColor="@color/black"
            android:textSize="28dp"
            tools:ignore="SpUsage" />

        <ImageButton
            android:id="@+id/Home_ImageButton_User"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/user_ico"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <!-- GET DEPARTURE and ARRIVAL LAYOUT-->

    <LinearLayout
        android:id="@+id/Home_LinearLayout_setTime"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Home_LinearLayout_TOP">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/Home_departure"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/Home_TextView_startDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nanumsquarer"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="NestedWeights,SpUsage" />

            <Button
                android:id="@+id/Home_Button_changeDay"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="#00FFFFFF"
                android:fontFamily="@font/nanumsquarer"
                android:stateListAnimator="@null"
                android:text="@string/Home_change"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/Home_departure"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:visibility="invisible"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/Home_TextView_startTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nanumsquarer"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="NestedWeights,SpUsage" />

            <Button
                android:id="@+id/Home_Button_changeTime"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="#00FFFFFF"
                android:fontFamily="@font/nanumsquarer"
                android:stateListAnimator="@null"
                android:text="@string/Home_change"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Home_LinearLayout_CENTER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Home_LinearLayout_setTime">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/Home_departure"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/Home_TextView_departure"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_shape"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/nanumsquarer"
                android:gravity="center|start"
                android:lines="1"
                android:onClick="onDepartureClicked"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:text="@string/Home_hint1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="start|center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Home_ImageView_DownArrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/downarrow"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/Home_arrival"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/Home_TextView_arrival"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_shape"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/nanumsquarer"
                android:gravity="center|start"
                android:lines="1"
                android:onClick="onArrivalClicked"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:text="@string/Home_hint1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_shape"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Home_LinearLayout_CENTER">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanumsquareb"
                    android:text="@string/Home_nearPlace"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanumsquarer"
                    android:text="@string/Home_info1"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    tools:ignore="SpUsage" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Home_LinearLayout_nearPlace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <fragment
                    android:id="@+id/Home_mapView"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

                <ListView
                    android:id="@+id/Home_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Home_LinearLayout_hideMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_shape"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Home_LinearLayout_CENTER" />

    <ImageView
        android:id="@+id/LoadingView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Home_LinearLayout_hideMap"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Home_TextView_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/nanumsquarer"
        android:text="@string/Home_warn1"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/Home_LinearLayout_hideMap"
        app:layout_constraintEnd_toEndOf="@id/Home_LinearLayout_hideMap"
        app:layout_constraintStart_toStartOf="@id/Home_LinearLayout_hideMap"
        tools:ignore="SpUsage" />


</androidx.constraintlayout.widget.ConstraintLayout>